# flight-htmlx-poc

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
app/: flight_data_generator.py  main.py  routes.py  schemas.py  write_fixtures.py
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: dropdown.html
frontend/src/css/: styles.css
frontend/src/scripts/: flights.js
infra/: app.py
infra/infra/: infra_stack.py
